commented (ehwas-pages-compiler "gsc-gambit")

--- a/README
+++ b/README
@@ -11,3 +11,8 @@ with your browser visit the url
 	     http://localhost:1080
 
 and click on the examples.
+
+PS: actually only firefox if fully supported
+    opera works well, 
+    problems with internet explorer but something works too
+    more problems with webkit based safari and chrome
